# coppelia_opengl

./: CMakeLists.txt  CMakeSettings.json
include/: HelperFunctions.h
scene/: camera_scene.ttt
src/: coppelia_opengl.cpp
